# web-components-rs

./: Cargo.toml  LICENSE  README.md  post_build.sh
example/: index.html  web-components-rs.js  web-components-rs_bg.wasm
leptos/: Cargo.toml  README.md
leptos/example/: index.html  web-components-rs.js  web-components-rs_bg.wasm
leptos/react-rust-web-components/public/: custom-leptos-component.js  index.html
leptos/react-rust-web-components/src/: App.js
leptos/src/: main.rs
react-rust-web-components/: package.json
react-rust-web-components/public/: custom-yew-component.js  index.html  web-components-rs_bg.wasm
react-rust-web-components/src/: App.js
src/: main.rs
yew/: README.md  Trunk.toml  post_build.sh
yew/example/: README.md  custom-component.js  custom-yew-component.js  web-components-rs.js  web-components-rs_bg.wasm
yew/react-rust-web-components/: package-lock.json
yew/react-rust-web-components/public/: custom-yew-component.js
yew/src/: main.rs
